# AI-LeadGen-OS

./: .env.example  .gitignore  README.md  compliance.md  docker-compose.yml  leadgen.html  overview.md  pyproject.toml  sources.md  todo.md
.claude/: settings.local.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 6ef78da3bcee_add_entities_duplicate_of.py  873566d3a418_timestamps_with_timezone.py  98d128c81167_initial_schema_jobs_entities_raw_.py  a3d5f2b18c04_add_search_templates.py  a6d2f8b1e094_entities_embedding_vector.py  a9e83c7b4d21_tenants_billing_columns.py  b4f72a9e3d58_add_webhooks.py  b5e21c4d9a88_add_users.py  c4a1e0b8d2f3_add_jobs_idempotency_key.py  c7b92d4f83e1_add_hubspot_integrations.py  c8f31e5a2b10_add_api_keys.py  d2c84f6a91b3_add_lead_status.py  d4a8f62c0e45_encrypt_phone_address.py  d8a3c91f6b27_add_pipedrive_integrations.py  e2b17d48f93c_add_tenants.py  e3a51f7b8c92_add_tenant_invites.py  e7b92f4a0c11_add_job_progress_counters.py  e9b714c2f8a3_add_google_sheets_destinations.py  f4a1c8d527e6_api_keys_rotation_columns.py  (+3 more)
app/: __init__.py  main.py
app/api/: ask.py  (+19 more)
scripts/: embed_entities.py  postgres-init.sql  retention_sweep.py  reverify_aged.py  smoke.py
tests/: conftest.py  test_api_keys.py  test_ask.py  test_auth_api.py  test_billing.py  test_blacklist_api.py  test_cache.py  test_circuit.py  test_compliant_mode.py  test_crawler.py  test_cron_tasks.py  test_crypto.py  test_dashboard.py  test_dedupe.py  test_discovery.py  test_email_verify.py  test_embeddings.py  test_end_to_end.py  test_extractors.py  test_foursquare_client.py  test_google_sheets.py  test_health.py  test_hubspot.py  test_job_runner.py  test_jobs_api.py  test_opencorporates_client.py  test_phone_verify.py  test_pipedrive.py  test_places_client.py  test_places_integration.py  test_quality.py  test_query_rules.py  test_query_validator.py  test_queue.py  test_retention_sweep.py  test_reverify.py  test_review_api.py  test_status_api.py  test_telemetry.py  test_templates_api.py  (+3 more)
web/: .gitignore  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts
(+86 files in other folders)
