[project]
name = "ai-leadgen-os"
version = "0.1.0"
description = "Compliant, cost-controlled lead generation platform for EU/UK B2B data"
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Combosoft Ltd.", email = "mrabbani@combosoft.co.uk" },
]
license = { text = "Proprietary" }

dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.30",
    "psycopg[binary]>=3.2",
    "redis>=5.2",
    "httpx>=0.28",
    "tenacity>=9.0",
    "structlog>=24.4",
    "sentry-sdk[fastapi]>=2.18",
    "anthropic>=0.40",
    "arq>=0.26",
    "playwright>=1.48",
    "selectolax>=0.3.27",
    "email-validator>=2.2",
    "dnspython>=2.7",
    "phonenumbers>=8.13",
    "python-multipart>=0.0.17",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "respx>=0.21",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle + pyflakes
    "I",             # isort
    "B",             # flake8-bugbear
    "UP",            # pyupgrade
    "SIM",           # flake8-simplify
    "ASYNC",         # flake8-async
    "S",             # bandit
    "N",             # pep8-naming
]
ignore = [
    "S101",  # allow assert in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S"]
"alembic/versions/**" = ["E501", "W291", "N999"]
"app/api/**" = ["B008"]  # FastAPI's Depends() default is the standard pattern
"scripts/**" = ["ASYNC240"]  # one-shot ops scripts; sync file I/O is fine

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
ignore_missing_imports = true
